Search endpoint: skeleton